--- a/templates/admin/add_new_post.ejs
+++ b/templates/admin/add_new_post.ejs
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">-->
-    <link rel="stylesheet" type="text/css" href="/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Patrick+Hand+SC&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	
     <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
+	<link rel="stylesheet" type="text/css" href="/main.css">
 	<link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<script src="/public/js/marked.js"></script>
 	<style>
@@ -63,10 +63,11 @@
 			</div>
 			<textarea id='input' name="body" type='text' form='main_form' class="form-control"></textarea>
 		</div>
-		<div class="col-xs-12 col-md-6 col2">
+		<div class="column col-xs-12 col-md-6 col2" id='edit'>
 			<div id='output' class="article render">
 				<h3>Here goes title</h3>
 				<p>Here goes post</p>
+				<div class="tags"><a>#tags_goes_here</a></div>
 				<div id="time"><time>00:00</time></div>
 			</div>
 		</div>
@@ -75,12 +76,16 @@
 	<script>
 		document.getElementById('input').style.height = 
 			(document.getElementById('control').offsetHeight - 224) + 'px';
-		//alert((document.getElementById('control').offsetHeight - 175) + 'px');
+
 		update = function () {
-			document.getElementById('output').innerHTML = 
-				'<h3>' + document.getElementById('title').value + '</h3>' + 
-				marked(document.getElementById('input').value) + '<div id="time"><time>'  + 
-				String(new Date()).slice(16, 21) + '</time></div>';
+			var x = '<h3>' + document.getElementById('title').value + '</h3>' + 
+					marked(document.getElementById('input').value);
+			var tags = document.getElementById('tags').value.split(" ");
+			x += '<div class="tags">';
+			for (var i = 0; i < tags.length; i++) x += '<a>#' + tags[i] + ' </a>';
+			x += '</div>';
+			x += '<div id="time"><time>' + String(new Date()).slice(16, 21) + '</time></div>';
+			document.getElementById('output').innerHTML = x;
 		}
 	</script>
 </body>
