--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -11,13 +11,14 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="/public/js/main.js"></script>
     <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
+    
     <title>Zen Sick</title>
 </head>
 <body>
     <div class="NavBar">
         <ul>
             <li><a href="/lastissue">LAST ISSUE</a></li>
-            <li><a href="/art">ART</a></li>
+            <li><a href="/img">ART</a></li>
             <li><a href="/music">MUSIC</a></li>
             <li><a href="/literature">LITERATURE</a></li>
             <li><a href="/articles">ARTICLES</a></li>
@@ -26,7 +27,7 @@
     
     <div class="bars">
         <div class="Header">
-            <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
+            <h1><a href="/">Zen Sick</a></h1>
             <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
         </div>
 	</div>
@@ -36,7 +37,7 @@
 	<div class="column">
 	<% for(var i = 0; i < posts.length; i++) { %>
         <div class="<%- posts[i].type %>">
-			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
+			<h3><a href="/<%- posts[i].type %>/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
 			<%- posts[i].body %>
             <div class='tags' id='t<%- posts[i].id %>'></div>
             <div id="time">
@@ -52,9 +53,9 @@
     <div class="bars">
         <div class="lowbar">
             <ul>
-                <li><a href="http://zensick.net/about">About</a></li>
-                <li><a href="http://zensick.net/authors">Authors</a></li>
-                <li><a href="http://zensick.net/contacts">Contact Us</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/authors">Authors</a></li>
+                <li><a href="/contacts">Contact Us</a></li>
                 <li><p>©Zen Sick Webzin. 2014.</p></li>
             </ul>
         </div>
