--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -1,1 +1,55 @@
-<h1><center>Here'll be content. Some day.</center></h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">
+        <link rel="stylesheet" type="text/css" href="/public/main.css">
+        <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="/public/js/main.js"></script>
+        <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
+        <title>Information - Zen Sick</title>
+    </head>
+    <body>
+        <div class="NavBar">
+            <div id="zensick">
+            <a href="/"><img src="/public/img/nav1.png"></a>
+            </div>
+                <ul id="nyaa">
+                    <li><a href="/lastissue">LAST ISSUE</a></li>
+                    <li><a href="/img">ART</a></li>
+                    <li><a href="/music">MUSIC</a></li>
+                    <li><a href="/literature">LITERATURE</a></li>
+                    <li><a href="/article">ARTICLES</a></li>
+                </ul>
+        </div>
+        <div class="footerref">
+            <div class="textmain">
+                <div id="about">
+                    <h3>О нашем сайте</h3>
+                    <p></p>
+                </div>
+                <div id="authors">
+                </div>
+                <div id="contact">
+                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
+                    <input type="email" placeholder="Your email">
+                    <input type="submit">
+                </div>
+            </div>
+        </div>
+        <div class="bars">
+        <div class="lowbar">
+            <ul>
+                <li><a href="/about">About</a></li>
+                <li><a href="/authors">Authors</a></li>
+                <li><a href="/contacts">Contact Us</a></li>
+                <li><p>©Zen Sick Webzin. 2014.</p></li>
+            </ul>
+        </div>
+    </div>
+    </body>
+</html>
