--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -33,6 +33,13 @@
                     <p></p>
                 </div>
                 <div id="authors">
+                    <h3>Авторы</h3>
+                    <div id="aut1">
+                        <ul>
+                            <li><img src='https://pp.vk.me/c622731/v622731256/1932a/lOd3I-AOY3Q.jpg' /></li>
+                            <li><p>Everything's doomed</p></li>
+                        </ul>
+                    </div>
                 </div>
                 <div id="contact">
                     <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
