--- a/templates/footer-ref.html
+++ b/templates/footer-ref.html
@@ -42,6 +42,7 @@
                     </div>
                 </div>
                 <div id="contact">
+                    <h3>Связаться с нами</h3>
                     <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
                     <input type="email" placeholder="Your email">
                     <input type="submit">
