--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -15,14 +15,18 @@
     <title>Zen Sick</title>
 </head>
 <body>
-    <div class="NavBar">
-        <ul>
-            <li><a href="/lastissue">LAST ISSUE</a></li>
-            <li><a href="/img">ART</a></li>
-            <li><a href="/music">MUSIC</a></li>
-            <li><a href="/literature">LITERATURE</a></li>
-            <li><a href="/articles">ARTICLES</a></li>
-        </ul>
+    <div class="bars">
+        <div class="invis">
+            <div class="NavBar">
+                <ul>
+                    <li><a href="/lastissue">LAST ISSUE</a></li>
+                    <li><a href="/img">ART</a></li>
+                    <li><a href="/music">MUSIC</a></li>
+                    <li><a href="/literature">LITERATURE</a></li>
+                    <li><a href="/articles">ARTICLES</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
     
     <div class="bars">
