--- a/public/main.css
+++ b/public/main.css
@@ -158,8 +158,7 @@ iframe{
     font-family: Shadows Into Light, sans-serif;
     font-size: 54px;
     text-align: center;
-    margin: 100px;
-    margin-top: 120px;
+    margin: 75px;
 }
 .Header a {
     color: #000;
@@ -235,7 +234,6 @@ iframe{
     opacity: 0.85;
     width: 98vw;
     text-align: center;
-    bottom:0;
 }
 .lowbar li {
     font-family: PT Sans, monospace;
@@ -275,7 +273,7 @@ iframe{
 .tags {
     font-size: 14px;
     margin-left: 20px;
-    margin-top: 5px;
+    margin-top: 7px;
 }
 .tags a {
     color: #aeaeae;
@@ -300,6 +298,8 @@ iframe{
     padding: 5px;
     margin-top: 10px;
 }
+
+/* about */
 .footerref .textmain #about {
     text-align: left;
 }
@@ -307,6 +307,7 @@ iframe{
     text-align: center;
 }
 
+/* authors */
 .footerref .textmain #authors {
     display: block;
     text-decoration: none;
@@ -332,6 +333,7 @@ iframe{
     height: 150px;
 }
 
+/* contact */
 .footerref .textmain #contact {
     font-family: PT Sans, monospace;
     text-align: center;
@@ -347,7 +349,7 @@ iframe{
     background: #195da1;
     color: #fff;
 }
-    
+
 
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
