--- a/public/main.css
+++ b/public/main.css
@@ -153,6 +153,7 @@ iframe{
     opacity: 0.8;
     border: solid white; 
     width: 98vw;
+    z-index: 0;
 }
 .Header h1 {
     font-family: Shadows Into Light, sans-serif;
