--- a/public/main.css
+++ b/public/main.css
@@ -159,7 +159,8 @@ iframe{
     font-family: Shadows Into Light, sans-serif;
     font-size: 54px;
     text-align: center;
-    margin: 75px;
+    margin: 100px;
+    margin-top: 120px;
 }
 .Header a {
     color: #000;
@@ -235,6 +236,7 @@ iframe{
     opacity: 0.85;
     width: 98vw;
     text-align: center;
+    bottom:0;
 }
 .lowbar li {
     font-family: PT Sans, monospace;
@@ -274,7 +276,7 @@ iframe{
 .tags {
     font-size: 14px;
     margin-left: 20px;
-    margin-top: 7px;
+    margin-top: 5px;
 }
 .tags a {
     color: #aeaeae;
@@ -299,8 +301,6 @@ iframe{
     padding: 5px;
     margin-top: 10px;
 }
-
-/* about */
 .footerref .textmain #about {
     text-align: left;
 }
@@ -308,7 +308,6 @@ iframe{
     text-align: center;
 }
 
-/* authors */
 .footerref .textmain #authors {
     display: block;
     text-decoration: none;
@@ -334,7 +333,6 @@ iframe{
     height: 150px;
 }
 
-/* contact */
 .footerref .textmain #contact {
     font-family: PT Sans, monospace;
     text-align: center;
@@ -350,7 +348,7 @@ iframe{
     background: #195da1;
     color: #fff;
 }
-
+    
 
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
