--- a/templates/footer-ref.html
+++ b/templates/footer-ref.html
@@ -39,17 +39,18 @@
                 <div id="authors">
                     <h3>Авторы</h3>
                     <div id="aut1">
-                        <p>Главный редактор - Марк Лино</p>
+                        <p>Главный редактор - В. Панферов</p>
                         <p>Выпускающий редактор - Desyu Rinsu</p>
                         <p>Технический директор - А. Соколов</p>
                         <p>Специальный корреспондент - И. Овсянников</p>
+                        <p>Штатный колумнист - А. Поздеева</p>
                         <p>Штатный фотограф - А. Будкин</p>
                         <p>Шеф музыкального департамента - П. Дворянкин</p>
                     </div>
                 </div>
                 <div id="contact">
                     <h3>Связаться с нами</h3>
-                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (которой пока нет, но которая обязательно появится в будущем).</p>
+                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
                     <input type="email" placeholder="Your email">
                     <input type="submit">
                 </div>
