--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -44,7 +44,7 @@
                 </div>
                 <div id="contact">
                     <h3>Связаться с нами</h3>
-                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (которой пока нет, но которая обязательно появится в будущем).</p>
+                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
                     <input type="email" placeholder="Your email">
                     <input type="submit">
                 </div>
