--- a/templates/footer-ref.html
+++ b/templates/footer-ref.html
@@ -33,19 +33,13 @@
         <div class="footerref">
             <div class="textmain">
                 <div id="about">
-                    <h3>О сайте</h3>
+                    <h3>О нашем сайте</h3>
                     <p></p>
                 </div>
                 <div id="authors">
                     <h3>Авторы</h3>
                     <div id="aut1">
-                        <p>Главный редактор - В. Панферов</p>
-                        <p>Выпускающий редактор - Desyu Rinsu</p>
-                        <p>Технический директор - А. Соколов</p>
-                        <p>Специальный корреспондент - И. Овсянников</p>
-                        <p>Штатный колумнист - А. Поздеева</p>
-                        <p>Штатный фотограф - А. Будкин</p>
-                        <p>Шеф музыкального департамента - П. Дворянкин</p>
+                        
                     </div>
                 </div>
                 <div id="contact">
