--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -14,21 +14,17 @@
         <title>Information - Zen Sick</title>
     </head>
     <body>
-        <div class="bars">
-            <div class="invis">
-            <div class="NavBar">
-                <div id="zensick">
-                    <a href="/"><img src="/public/img/nav1.png"></a>
-                </div>
-                    <ul id="nyaa">
-                        <li><a href="/lastissue">LAST ISSUE</a></li>
-                        <li><a href="/img">ART</a></li>
-                        <li><a href="/music">MUSIC</a></li>
-                        <li><a href="/literature">LITERATURE</a></li>
-                        <li><a href="/article">ARTICLES</a></li>
-                    </ul>
+        <div class="NavBar">
+            <div id="zensick">
+            <a href="/"><img src="/public/img/nav1.png"></a>
             </div>
-            </div>
+                <ul id="nyaa">
+                    <li><a href="/lastissue">LAST ISSUE</a></li>
+                    <li><a href="/img">ART</a></li>
+                    <li><a href="/music">MUSIC</a></li>
+                    <li><a href="/literature">LITERATURE</a></li>
+                    <li><a href="/article">ARTICLES</a></li>
+                </ul>
         </div>
         <div class="footerref">
             <div class="textmain">
@@ -39,7 +35,10 @@
                 <div id="authors">
                     <h3>Авторы</h3>
                     <div id="aut1">
-                        
+                        <ul>
+                            <li><img src='https://pp.vk.me/c622731/v622731256/1932a/lOd3I-AOY3Q.jpg' /></li>
+                            <li><p>Everything's doomed</p></li>
+                        </ul>
                     </div>
                 </div>
                 <div id="contact">
