--- a/templates/footer-ref.html
+++ b/templates/footer-ref.html
@@ -34,12 +34,19 @@
             <div class="textmain">
                 <div id="about">
                     <h3>О нашем сайте</h3>
-                    <p></p>
+                    <p>Мир сошел с ума. Постепенно, потихоньку набирая обороты, уверенно и не спеша. Мир сошел с ума, и мы должны принять этот факт без излишней драматизации. Может произойти так, что третьей мировой не избежать. Может быть, Путин вскоре аннексирует что-нибудь еще, а цены в Ашане подскочат сильнее нынешнего. Может быть, мы все живем в параллельном мире, когда в реальности соблюдаются библейские заветы, а в рандомном подъезде рандомной пятиэтажки на окраине Москвы слушают не АК-47, а Моцарта. Мы можем лишь наблюдать то, что видим и что чувствуем. Порою – пытаться что-то изменить. Именно для перемен мы создали ZenSick, и пусть это заявление звучит претенциозно и пафосно. Надеемся, что не зря.</p>
+<p>ZenSick – это вчерашний подросток, который витает в облаках, грезит абсурдными идеями и возможностями, но может наткнуться на острые скалы действительности. Это романтический герой, который вот-вот расправит крылья и полетит навстречу приключениям. Но вот и занавес, титры. «To be continued».</p> 
+                    <p>Следующий эпизод уже на подходе.</p>
                 </div>
                 <div id="authors">
                     <h3>Авторы</h3>
                     <div id="aut1">
-                        
+                        <p>Главный редактор - Марк Лино</p>
+<p>Выпускающий редактор - Desyu Rinsu</p>
+<p>Технический директор - А. Соколов</p>
+<p>Специальный корреспондент - И. Овсянников</p>
+<p>Штатный фотограф - А. Будкин</p>
+<p>Шеф музыкального департамента - П. Дворянкин</p>
                     </div>
                 </div>
                 <div id="contact">
