--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -40,14 +40,15 @@
                 </div>
                 <div id="authors">
                     <h3>Авторы</h3>
-                    <div id="aut1">
                         <div id="aut1">
-<p>Главный редактор - Марк Лино</p>
-<p>Выпускающий редактор - Desyu Rinsu</p>
-<p>Технический директор - А. Соколов</p>
-<p>Специальный корреспондент - И. Овсянников</p>
-<p>Штатный фотограф - А. Будкин</p>
-<p>Шеф музыкального департамента - П. Дворянкин</p>
+                            <div id="aut1">
+                                <p>Главный редактор - Марк Лино</p>
+                                <p>Выпускающий редактор - Desyu Rinsu</p>
+                                <p>Технический директор - А. Соколов</p>
+                                <p>Специальный корреспондент - И. Овсянников</p>
+                                <p>Штатный фотограф - А. Будкин</p>
+                                <p>Шеф музыкального департамента - П. Дворянкин</p>
+                        </div>
                     </div>
                 </div>
                 <div id="contact">
