--- a/public/main.css
+++ b/public/main.css
@@ -228,9 +228,7 @@ iframe{
     margin-left: auto;
     margin-right: auto;
     opacity: 0.85;
-    bottom: 0;
-    margin-bottom:0px;
-    width: inherit;
+    width: 100%;
 }
 .lowbar ul {
     text-align: center;
@@ -296,7 +294,7 @@ iframe{
     width: 100%;
     border: white solid;
     box-shadow: 5px 5px 5px #888888;
-    padding: 5px;
+    padding: 15px;
     margin-top: 10px;
 }
 .footerref .textmain #about {
