--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -53,7 +53,7 @@
                 </div>
                 <div id="contact">
                     <h3>Связаться с нами</h3>
-                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку.</p>
+                    <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (пока ее нет, но скоро, возможно, появится).</p>
                     <input type="email" placeholder="Your email">
                     <input type="submit">
                 </div>
