--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">
+        <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff,width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/public/main.css">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
