Link to the "about" page updated

--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -55,9 +55,9 @@
         <div class="bars">
         <div class="lowbar">
             <ul>
-                <li><a href="/about">About</a></li>
-                <li><a href="/authors">Authors</a></li>
-                <li><a href="/contacts">Contact Us</a></li>
+                <li><a href="/about#about">About</a></li>
+                <li><a href="/about#authors">Authors</a></li>
+                <li><a href="/about#contact">Contact Us</a></li>
                 <li><p>©Zen Sick Webzin. 2015.</p></li>
             </ul>
         </div>
