--- a/public/main.css
+++ b/public/main.css
@@ -196,18 +196,34 @@ iframe{
     margin: 0;
     top: -40%;
 }
-.NavBar li {
+.NavBar #hyperlink {
+    text-align: center;
+    display: inline-block;
+    height: inherit;
+    font-family: Shadows Into Light, sans-serif;
+    margin-left: -40px;
+    margin-bottom: 10px;
+}
+.NavBar #nyaa #hyperlink a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: none;
+}
+.NavBar #nyaa #hyperlink a:hover {
+    text-transform: none;
+}
+.NavBar #nyaa li {
     font-family: Cutive Mono, monospace;
     display: inline-table;
     padding-right: 35px;
     margin: 0;
 }
-.NavBar a {
+.NavBar #nyaa a {
     text-decoration: none;
     color: #fff;
     text-transform: none;
 }
-.NavBar a:hover {
+.NavBar #nyaa a:hover {
     text-decoration: none;
     text-transform: lowercase;
 }
