--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -20,6 +20,7 @@
                     <a href="/"><img src="/public/img/nav1.png"></a>
                 </div>
                     <ul id="nyaa">
+                        <li><div id="hyperlink"><a href="/">Zen Sick</a></div></li>
                         <li><a href="/lastissue">LAST ISSUE</a></li>
                         <li><a href="/img">ART</a></li>
                         <li><a href="/music">MUSIC</a></li>
